--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@ VoiceRecognition/deepspeech-train-venv
 VoiceRecognition/data
 /.idea
 /.vscode
-/__pycache__/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
